# C-Space-MMORPG

Server/include/: Client.h  CollisionHandler.h  DatabaseManager.h  PlayerConnectionManager.h  SectorManager.h  SectorSimulation.h  TCPBinaryProtocol.h  TCPBinaryProtocolCodes.h  entities.h  main.h
Server/sql/: GenerateTables.sql
Server/src/: CMakeLists.txt  main.c
Server/src/DatabaseService/: CMakeLists.txt  DatabaseConnectionManager.c
Server/src/GameManagement/: CMakeLists.txt  SectorManager.c
Server/src/GameManagement/Simulation/: CMakeLists.txt  CollisionHandler.c  SectorSimulation.c
Server/src/PlayerConnectionManager/: CMakeLists.txt  Client.c  PlayerConnectionManager.c  TCPBinaryProtocol.c
